<resources>

    <string name="app_name">Monaco</string>

    <!--Languages Strings-->
    <string name="english">English</string>
    <string name="french">français</string>
    <string name="italiano">italiano</string>
    <string name="siam2017">SIAM 2017</string>

    <string name="com_auth0_client_id">f47lSVZ0FriC6L2I6FEmrvHXavNWs0NE</string>
    <string name="com_auth0_domain">YOUR_DOMAIN</string>

    <!--login/register strings-->
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="skip">Skip</string>
    <string name="emailAdressCap">EMAIL ADDRESS</string>
    <string name="passwordCap">PASSWORD</string>
    <string name="passwordForgotten">Password forgotten</string>
    <string name="forgotPsd">Forgot Password?</string>
    <string name="loginCap">LOGIN</string>
    <string name="userNameCap">USERNAME</string>
    <string name="regiterCap">REGISTER</string>
    <string name="confirmPassCap">CONFIRM PASSWORD</string>
    <string name="createAcc">CREATE AN ACCOUNT</string>
    <string name="signup">SIGN UP</string>
    <string name="login_successfully">You have login successfully</string>
    <string name="login_error">Please verify your username &amp; password</string>
    <string name="registered_successfully">You have registered successfully</string>

    <string name="age">AGE</string>
    <string name="gender">GENDER</string>
    <string name="enterEmailAddress">Please enter email address</string>
    <string name="validateEmailAdd">Please enter a valid email address</string>
    <string name="enterPassword">Please enter password</string>
    <string name="validatePassword">Password needs to be between 8 to 12 characters</string>
    <string name="validateUserName">Username should have atleast 3 characters</string>    <!--change-->
    <string name="enterUserName">Please enter username</string>
    <string name="enterConfirmPass">Please enter confirm password</string>
    <string name="validateConfirmPassword">Confirm password needs to be between 8 to 12 characters</string>
    <string name="matchConfirmPassword">Confirm password did not match</string>
    <string name="enterAge">Please select age</string>
    <string name="enterGender">Please select gender</string>
    <string name="WrongEmailPassError">Wrong email address \nor wrong password \nPlease retry !</string>


    <!--Reset Password Strings-->
    <string name="resetPasswordCap">RESET PASSWORD</string>
    <string name="goToLogin">Go to login</string>
    <string name="backToLogin">Back to login</string>
    <string name="resetPasswordLink">A reset password \nlink has been sent to your \nemail address</string>



    <!--Other Strings-->
    <string name="connexion">Connexion</string>
    <string name="ok">ok</string>
    <string name="or">OR</string>
    <string name="title_activity_maps">Map</string>
    <string name="loading">Loading</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="api">http://104.131.179.118/monacoapp/public/api/</string>
    <string name="internetConnection">No Internet Connection</string>
    <string name="feb16From">16th february \nFrom <b>10am</b> to <b>16pm</b></string>
    <string name="testDrive">Test Drive Mercedes CLA 4</string>

    <!--Home Strings-->
    <string name="favorites">FAVORITES</string>
    <string name="go">GO</string>
    <string name="descriptionMapDetails">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ctetuer adipiscing elim</string>
    <string name="informations">Informations</string>
    <string name="events">Events</string>
    <string name="title_activity_map_demo">Map</string>
    <string name="address">Address</string>
    <string name="website">website</string>
    <string name="situation">Situation</string>
    <string name="contact">Contact</string>


    <!--Setting String-->
    <string name="settingsCap">SETTINGS</string>
    <string name="accountCap">ACCOUNT</string>
    <string name="actualitesCap">ACTUALITES</string>
    <string name="foodnDrinksCap">FOOD/DRINKS</string>
    <string name="shuttlesCap">SHUTTLES</string>
    <string name="servicesCap">SERVICES</string>
    <string name="eventCap">EVENTS</string>
    <string name="exhibithorsCap">EXHIBITHORS</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="pedometer">Pedometer</string>
    <string name="credits">Credits</string>
    <string name="UserName">Username</string>
    <string name="password">Password</string>
    <string name="change">Change</string>
    <string name="autoPulusCap">AUTOPLUS NEWS</string>

    <!--otther strings-->
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="enableGps">Your GPS seems to be disabled, do you want to enable it?</string>
</resources>
