<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/langBG">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_top70"
        android:layout_marginLeft="@dimen/default_margin_extra_large"
        android:layout_marginRight="@dimen/default_margin_extra_large">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_m_o_n_a_c_o"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/login"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/default_margin_language"
            android:textColor="@color/buttonBgColor"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_large30"
            android:layout_gravity="center">

            <View
                android:layout_width="37dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/margin"
                android:background="@android:color/white">
            </View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textSize="@dimen/normal_text_minus"
                android:textColor="@android:color/white" />
            <View
                android:layout_width="37dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin"
                android:background="@android:color/white">
            </View>
        </LinearLayout>


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large30"
            android:background="@drawable/rounded_button"
            android:text="@string/createAcc"
            android:textStyle="bold"
            android:textColor="@color/buttonBgColor"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvSkip"
        android:text="@string/skip"
        android:padding="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/default_margin_double"
        android:textSize="@dimen/normal_text_minus"
        android:textColor="@android:color/white" />

</RelativeLayout>