<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rlUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="@dimen/default_margin_double">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/UserName"
            android:textColor="@color/langBG"/>

        <TextView
            android:id="@+id/tvChangeUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/change"
            android:textStyle="italic"
            android:textColor="@color/colorRed"/>
    </RelativeLayout>
    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rlUserName"
        android:background="@color/colorRed">
    </View>

    <RelativeLayout
        android:id="@+id/rlPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="@dimen/default_margin_double"
        android:layout_below="@+id/view1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/password"
            android:textColor="@color/langBG"/>

        <TextView
            android:id="@+id/tvChangePass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/change"
            android:textStyle="italic"
            android:textColor="@color/colorRed"/>
    </RelativeLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rlPassword"
        android:background="@color/colorRed">
    </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="@dimen/default_margin_double"
        android:layout_below="@id/view2">
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descriptionMapDetails"
            android:textColor="@color/colorRed"/>
    </LinearLayout>

</RelativeLayout>