<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_login_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/langBG">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_marginTop="@dimen/default_margin_double"
        android:paddingTop="@dimen/default_margin_half5"
        android:paddingRight="@dimen/default_margin_half5"
        android:paddingBottom="@dimen/default_margin_half5"
        app:srcCompat="@drawable/arrowleft" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivBack"
        android:layout_marginLeft="@dimen/default_margin_extra_large"
        android:layout_marginRight="@dimen/default_margin_extra_large"
        android:layout_marginTop="@dimen/default_margin_extra_large"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/loginCap"
            android:textColor="@android:color/white"
            android:textSize="@dimen/normal_text_large_extra"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEmailId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_triple1"
            android:text="@string/emailAdressCap"
            android:textColor="@android:color/white"
            android:textSize="@dimen/normal_text"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tiEmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEmailAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:backgroundTint="@android:color/white"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/passwordCap"
            android:textColor="@android:color/white"
            android:textSize="@dimen/normal_text"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tiPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="false">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:backgroundTint="@android:color/white"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/llErrorMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/thunder" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_half"
                android:gravity="center"
                android:text="@string/WrongEmailPassError"
                android:textColor="@android:color/white"
                android:textSize="@dimen/normal_text"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/rounded_button"
            android:text="@string/login"
            android:textColor="@color/buttonBgColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvForgotPsd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/default_margin"
            android:padding="@dimen/default_margin"
            android:text="@string/forgotPsd"
            android:textColor="@android:color/white"
            android:textSize="@dimen/normal_text" />
    </LinearLayout>

</RelativeLayout>
