<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/rlLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="@dimen/default_margin_double">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text=""
            android:textColor="@color/langBG"/>

        <TextView
            android:id="@+id/tvChangeLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/english"
            android:textColor="@color/colorRed"/>
    </RelativeLayout>
    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rlLanguage"
        android:background="@color/colorRed">
    </View>
    <RelativeLayout
        android:id="@+id/rlNotis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_below="@id/view1"
        android:padding="@dimen/default_margin_double">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/notifications"
            android:textColor="@color/langBG"/>

        <ToggleButton
            android:id="@+id/tbNotis"
            android:layout_width="45dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textOn=""
            android:textOff=""
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:background="@drawable/toggle_selector"/>
    </RelativeLayout>
    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rlNotis"
        android:background="@color/colorRed">
    </View>

    <RelativeLayout
        android:id="@+id/rlPedoMeter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_below="@id/view2"
        android:padding="@dimen/default_margin_double">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/pedometer"
            android:textColor="@color/langBG"/>

        <ToggleButton
            android:id="@+id/tbPedoMeter"
            android:layout_width="45dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textOn=""
            android:textOff=""
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:background="@drawable/toggle_selector"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlCreditsDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorRed"
        android:layout_below="@id/rlPedoMeter"
        android:padding="@dimen/default_margin_double">

        <TextView
            android:id="@+id/tvCredits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/credits"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/tvCreditsDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/default_margin_half5"
            android:text="@string/descriptionMapDetails"
            android:layout_below="@+id/tvCredits"
            android:textColor="@android:color/white"/>
    </RelativeLayout>
</RelativeLayout>