<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/langBG">

    <include
        android:id="@+id/login_reg_tool"
        layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/svRegis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_reg_tool">

        <LinearLayout
            android:id="@+id/llRegis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin_extra_large"
            android:layout_marginRight="@dimen/default_margin_extra_large"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/createAcc"
                android:textColor="@android:color/white"
                android:textSize="@dimen/normal_text_large_extra"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_triple1"
                android:text="@string/userNameCap"
                android:textColor="@android:color/white"
                android:textSize="@dimen/normal_text"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiEtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/tvEmailAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/emailAdressCap"
                android:textColor="@android:color/white"
                android:textSize="@dimen/normal_text"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiEtEmailAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etEmailAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/passwordCap"
                android:textColor="@android:color/white"
                android:textSize="@dimen/normal_text"
                android:textStyle="bold" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiEtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="false">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/tvConfirmPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/confirmPassCap"
                android:textColor="@android:color/white"
                android:textSize="@dimen/normal_text"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiEtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="false">

                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/age"
                android:textColor="@android:color/white"
                android:textSize="@dimen/normal_text"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiEtAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:focusable="false"
                    android:imeOptions="actionNext"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/gender"
                android:textColor="@android:color/white"
                android:textSize="@dimen/normal_text"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiEtGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:focusable="false"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnCreatAcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:background="@drawable/rounded_button"
                android:text="@string/createAcc"
                android:layout_marginBottom="@dimen/default_margin_extra_double_large"
                android:textColor="@color/buttonBgColor"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
